Did some stuff. [8m0s]

--- a/source/_posts/bookmark/2016-11-24-paradise.md
+++ b/source/_posts/bookmark/2016-11-24-paradise.md
@@ -19,6 +19,4 @@ bookmark:
 
 [Studio Smack](http://www.studiosmack.nl/)'s contemporary interpretation of [The Garden of Earthly Delights](https://en.wikipedia.org/wiki/The_Garden_of_Earthly_Delights) by Hieronymus Bosh.
 
-{% capture image %}{{ '/2016/329/paradise/the-graden-of-earthly-delights-by-hieronymus-bosch.jpg' | prepend: site.upload_url }}{% endcapture %}
-
-{% include c_responsive_image.html src=image %}
+{% include c_responsive_image.html src='2016/329/paradise/the-graden-of-earthly-delights-by-hieronymus-bosch.jpg' %}
