--- a/source/_posts/simple/2016-01-05-chip.markdown
+++ b/source/_posts/simple/2016-01-05-chip.markdown
@@ -7,8 +7,4 @@ tags:
   - chip
 ---
 
-{% capture image %}{{ site.upload_url }}{% post_url /simple/2016-01-05-chip %}chip.jpg{% endcapture %}
-
-{% include c_responsive_image.html src=image alt="CHIP" caption="Got my CHIP today!" %}
-
-{% picture 2016/005/chip/chip.jpg %}
+{% include c_responsive_image.html src='2016/005/chip/chip.jpg' alt="CHIP" caption="Got my CHIP today!" %}
