Fixed up some stuff. [0]

--- a/source/_posts/bookmark/2016-11-24-paradise.md
+++ b/source/_posts/bookmark/2016-11-24-paradise.md
@@ -15,8 +15,8 @@ bookmark:
   published: 2016-11-15T07:53
 ---
 
-{% include c_responsive_video.html iframe_url='https://player.vimeo.com/video/191632804' %}
+{% include c_video.html iframe_url='https://player.vimeo.com/video/191632804' %}
 
 [Studio Smack](http://www.studiosmack.nl/)'s contemporary interpretation of [The Garden of Earthly Delights](https://en.wikipedia.org/wiki/The_Garden_of_Earthly_Delights) by Hieronymus Bosh.
 
-{% include c_responsive_image.html src='2016/329/paradise/the-graden-of-earthly-delights-by-hieronymus-bosch.jpg' %}
+{% include c_image.html src='2016/329/paradise/the-graden-of-earthly-delights-by-hieronymus-bosch.jpg' %}
