Fixed up a bunch of stuff.

--- a/source/_posts/bookmark/2016-04-19-devops.markdown
+++ b/source/_posts/bookmark/2016-04-19-devops.markdown
@@ -13,8 +13,4 @@ bookmark:
   published: 2016-05-19T00:00:00
 ---
 
-<div class="responsive-image">
-    <div class="responsive-image__wrapper">
-        <img class="responsive-image__image" src="{{ 'decipher-me-or-devops-you.png' | prepend: page.url | prepend: site.upload_url }}">
-    </div>
-</div>
+{% c_image.html src='2016/110/devops/decipher-me-or-devops-you.png' caption="DevOps Everything! (Internet of Things Yay!)" %}
