--- a/source/_posts/list/2011-12-19-top-40-songs-of-2011.markdown
+++ b/source/_posts/list/2011-12-19-top-40-songs-of-2011.markdown
@@ -1,6 +1,6 @@
 ---
-layout: post_article
-category: article
+layout: post_list
+category: list
 date: 2011-12-19T15:24:00
 title: "Top 40 Songs of 2011"
 tags: [music, top-of-2011, music]
