--- a/source/_posts/bookmark/2016-12-06-hard-ship.markdown
+++ b/source/_posts/bookmark/2016-12-06-hard-ship.markdown
@@ -13,6 +13,7 @@ layout: post_bookmark
 tags:
 - sailing
 title: Hard Ship
+feature-image: 2016/341/hard-ship/hard-ship.webp
 ---
 
 The story of three paralyzed sailors competing in the Race to Alaska, a 750
