Fxied up some stuff. [0]

--- a/source/_posts/simple/2016-01-05-chip.markdown
+++ b/source/_posts/simple/2016-01-05-chip.markdown
@@ -5,6 +5,7 @@ title: CHIP Arrived
 date: 2016-01-05T13:25
 tags:
   - chip
+feature-image: 2016/005/chip/chip.jpg
 ---
 
 {% include c_image.html src='2016/005/chip/chip.jpg' alt="CHIP" caption="Got my CHIP today!" %}
